tests/paczka1/small_fuzzy/72185934.err
Error in line 5: gh2 A160 98,1
Error in line 6: gh2 A503 91,1
Error in line 2: FRf A156 77,1
Error in line 7: gh2 A160 64,1
